--- a/package.json
+++ b/package.json
@@ -11,49 +11,49 @@
     "heroku"
   ],
   "dependencies": {
-    "express": "^4.2.0nodmeo ",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0",
-    "stylus": "0.42.3",
-    "mongoose": "^3.8.13",
-    "passport": "^0.2.0",
-    "mongodb": "^1.4.7",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^0.3.0",
-    "logger": "0.0.1",
-    "express-session": "^1.7.0",
-    "method-override": "^2.1.2",
-    "connect": "^3.1.0",
-    "passport-facebook": "^1.0.3",
-    "passport-twitter": "^1.0.2",
-    "passport-github": "^0.1.5",
-    "passport-google": "^0.3.0",
-    "socket.io": "^1.0.6",
     "angular-peer": "^1.0.0",
-    "express.io": "^1.1.13",
-    "cheerio": "^0.17.0",
-    "request": "^2.42.0",
-    "ff": "^0.2.1",
     "async": "^0.9.0",
-    "node-geocoder": "^2.9.0",
-    "geocoder": "^0.2.0",
-    "node-phantom": "^0.2.5",
-    "phantom": "^0.6.5",
-    "http": "0.0.0",
-    "redis": "^0.12.1",
-    "express-minify": "0.0.11",
-    "node-minify": "^0.12.1",
-    "moment": "^2.8.3",
-    "newrelic": "^1.13.0",
-    "logfmt": "^1.2.0",
     "bcrypt": "^0.8.0",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.0.0",
+    "cheerio": "^0.17.0",
+    "connect": "^3.1.0",
+    "cookie-parser": "~1.0.1",
+    "debug": "~0.7.4",
+    "express": "^4.2.0nodmeo ",
+    "express-minify": "0.0.11",
+    "express-session": "^1.7.0",
+    "express.io": "^1.1.13",
+    "ff": "^0.2.1",
+    "geocoder": "^0.2.0",
+    "http": "0.0.0",
+    "jade": "~1.3.0",
+    "logfmt": "^1.2.0",
+    "logger": "0.0.1",
+    "method-override": "^2.1.2",
+    "moment": "^2.8.3",
+    "mongodb": "^1.4.7",
+    "mongoose": "^3.8.13",
+    "morgan": "~1.0.0",
+    "newrelic": "^1.13.0",
     "nightmare": "^1.6.2",
-    "phantomjs": "^1.9.12"
+    "node-geocoder": "^2.9.0",
+    "node-minify": "^0.12.1",
+    "node-phantom": "^0.2.5",
+    "passport": "^0.2.0",
+    "passport-facebook": "^1.0.3",
+    "passport-github": "^0.1.5",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^0.3.0",
+    "passport-twitter": "^1.0.2",
+    "phantom": "^0.6.5",
+    "phantomjs": "^1.9.12",
+    "redis": "^0.12.1",
+    "request": "^2.42.0",
+    "socket.io": "^1.0.6",
+    "static-favicon": "~1.0.0",
+    "stylus": "0.42.3"
   },
   "engines": {
     "node": "0.11.x"
