--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app"
   },
   "author": "Yash Saxena",
   "keywords": [
@@ -33,7 +33,7 @@
     "method-override": "^2.1.2",
     "moment": "^2.8.3",
     "mongodb": "^1.4.7",
-    "mongoose": "^3.8.13",
+    "mongoose":"3.8",
     "morgan": "~1.0.0",
     "newrelic": "^1.13.0",
     "nightmare": "^1.6.2",
